# sse

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  SSE_WEB_PLAN.md  book.toml
.github/workflows/: benchmarks.yml  pages.yml  release.yml  run_test.yml
configs/: rydberg-chain.yaml  tfim-chain.yaml
docs/: SUMMARY.md  api.md  artifacts.md  browser.md  configuration.md  current-interface.md  getting-started.md  introduction.md  limitations.md  physical-conventions.md  sse-method.md  validation.md
docs/models/: index.md  rydberg.md  tfim.md
docs/simulation/: convergence.md  index.md  reproducibility.md  uncertainty.md
examples/: rydberg_benchmark.rs  rydberg_scaling.rs  tfim_benchmark.rs
src/: artifacts.rs  config.rs  core.rs  geometry.rs  hamiltonian.rs  lattice.rs  lib.rs  main.rs  model.rs  runner.rs
src/sse/: local_model.rs  measurements.rs  mod.rs  parallel.rs  sampler.rs  state.rs
sse-web/: Cargo.toml
sse-web/scripts/: check_presets_history.mjs  generate_presets.mjs  serve_demo.sh
sse-web/src/: engine.rs  lib.rs  wasm.rs
sse-web/tests/: engine.rs  stats_parity.mjs  wasm_parity.mjs
sse-web/tests/fixtures/: cli_parity.json
sse-web/web/: app.js  index.html  presets.json  style.css  worker.js
sse-web/web/ui/: lattice.js  plot.js  stats.js
tests/: cli.rs
