[package]
name = "quantum-sse"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Finite-temperature stochastic series expansion quantum Monte Carlo for lattice models"
repository = "https://github.com/lere01/sse.git"
homepage = "https://lere01.github.io/sse/"
documentation = "https://lere01.github.io/sse/api/sse/"
readme = "README.md"
publish = ["crates-io"]
keywords = ["quantum-monte-carlo", "physics", "lattice", "spin", "rydberg"]
categories = ["science", "simulation"]

[[bin]]
name = "sse"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.49", features = ["derive"] }
qslib-quantum = { version = "0.2.0", features = ["sse", "variational"] }
rand_chacha = "0.10.0"
rand_core = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
