[package]
name = "sse-web"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Browser (WebAssembly) surface for the sse stochastic series expansion CLI"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qslib-quantum = { version = "0.2.0", features = ["sse", "variational"] }
rand_chacha = "0.10.0"
rand_core = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.126"
